@@ -1,0 +1,5 @@
+$('.{field}').jRating({
+    rateMax : 5, // highest rating
+    phpPath : '/viewer/rate' // target for the AJAX call
+});
+
